--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 		<meta name="description" content="Lost Treasure is a 3d RPG game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
 		<meta property="og:url" content="http://niklever.com/games/losttreasure" />
 		<meta property="og:type" content="product" />
-		<meta property="og:title" content="Lost Treasure - the mystery puzzle game" />
+		<meta property="og:title" content="3D Web Game" />
 		<meta property="og:description" content="Lost Treasure is a 3d RPG game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
 		<meta property="og:image" content="http://niklever.com/games/losttreasure/assets/losttreasure-og.jpg" />
 		<meta property="og:image:secure_url" content="https://niklever.com/games/losttreasure/assets/losttreasure-og.jpg" />
@@ -37,7 +37,7 @@
             </ul>
         </div>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-		
+
         <script src="/javascripts/three.min.js"></script>
 		<script src="/javascripts/inflate.min.js"></script>
 		<script src="/javascripts/FBXLoader.js"></script>
