--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title>3D Web Game</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<meta name="description" content="Lost Treasure is a 3d RPG game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
+		<meta name="description" content="3D Web Game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
 		<meta property="og:url" content="http://niklever.com/games/losttreasure" />
 		<meta property="og:type" content="product" />
 		<meta property="og:title" content="3D Web Game" />
