url domain/3d-game 에 맞춰서 설정값 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,11 @@
 	<title>3D Web Game</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<meta name="description"
-		content="3D Web Game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
+	<meta name="description" content="3D Web Game" />
 	<meta property="og:url" content="http://niklever.com/games/losttreasure" />
 	<meta property="og:type" content="product" />
 	<meta property="og:title" content="3D Web Game" />
-	<meta property="og:description"
-		content="Lost Treasure is a 3d RPG game. Using the Three.js library. author:Nik Lever ©2018 category:application-javascript" />
+	<meta property="og:description" content="3D Web Game" />
 	<meta property="og:image" content="http://niklever.com/games/losttreasure/assets/losttreasure-og.jpg" />
 	<meta property="og:image:secure_url" content="https://niklever.com/games/losttreasure/assets/losttreasure-og.jpg" />
 	<meta property="og:image:type" content="image/jpeg" />
@@ -20,7 +18,7 @@
 	<meta property="og:image:alt" content="Lost Treasure - the mystery puzzle game" />
 	<meta property='og:video' content='https://www.youtube.com/v/PVDslewhzqY' />
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Kavivanar" rel="stylesheet">
-	<link rel='stylesheet' href='./stylesheets/style.css' />
+	<link rel='stylesheet' href='./3d-game/stylesheets/style.css' />
 </head>
 
 <body>
@@ -44,12 +42,12 @@
 		integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
 		crossorigin="anonymous"></script>
 
-	<script src="./javascripts/three.min.js"></script>
-	<script src="./javascripts/inflate.min.js"></script>
-	<script src="./javascripts/FBXLoader.js"></script>
-	<script src="./javascripts/Detector.js"></script>
+	<script src="./3d-game/javascripts/three.min.js"></script>
+	<script src="./3d-game/javascripts/inflate.min.js"></script>
+	<script src="./3d-game/javascripts/FBXLoader.js"></script>
+	<script src="./3d-game/javascripts/Detector.js"></script>
 	<!--<script src="../../libs/stats.min.js"></script>-->
-	<script src="./javascripts/game.js"></script>
+	<script src="./3d-game/javascripts/game.js"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function () {
 			const game = new Game();
