--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 	<meta property="og:image:alt" content="Lost Treasure - the mystery puzzle game" />
 	<meta property='og:video' content='https://www.youtube.com/v/PVDslewhzqY' />
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Kavivanar" rel="stylesheet">
-	<link rel='stylesheet' href='./3d-game/stylesheets/style.css' />
+	<link rel='stylesheet' href='./stylesheets/style.css' />
 </head>
 
 <body>
@@ -42,12 +42,12 @@
 		integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
 		crossorigin="anonymous"></script>
 
-	<script src="./3d-game/javascripts/three.min.js"></script>
-	<script src="./3d-game/javascripts/inflate.min.js"></script>
-	<script src="./3d-game/javascripts/FBXLoader.js"></script>
-	<script src="./3d-game/javascripts/Detector.js"></script>
+	<script src="./javascripts/three.min.js"></script>
+	<script src="./javascripts/inflate.min.js"></script>
+	<script src="./javascripts/FBXLoader.js"></script>
+	<script src="./javascripts/Detector.js"></script>
 	<!--<script src="../../libs/stats.min.js"></script>-->
-	<script src="./3d-game/javascripts/game.js"></script>
+	<script src="./javascripts/game.js"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function () {
 			const game = new Game();
